[CMHAA-34] - Fixed spacing of button

--- a/src/scss/_jumbotron.scss
+++ b/src/scss/_jumbotron.scss
@@ -4,6 +4,12 @@
     top: -2px;
   }
 
+  @media (min-width: $breakpoint-medium) {
+    .uk-button {
+      margin-top: 20px;
+    }
+  }
+
   &.isHome {
     .uk-background-cover {
       padding-top: 280px;
